logs/robogenerator.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/robogenerator'...
Compiling './lib/python3.5/site-packages/robogenerator/PathModel.py'...
***   File "./lib/python3.5/site-packages/robogenerator/PathModel.py", line 149
    print '************'
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/robogenerator/data_algorithm'...
Compiling './lib/python3.5/site-packages/robogenerator/data_algorithm/all_pairs.py'...
***   File "./lib/python3.5/site-packages/robogenerator/data_algorithm/all_pairs.py", line 7
    print parameters
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/robogenerator/data_algorithm/metacomm'...
Listing './lib/python3.5/site-packages/robogenerator/data_algorithm/metacomm/combinatorics'...
Compiling './lib/python3.5/site-packages/robogenerator/data_algorithm/metacomm/combinatorics/all_pairs2.py'...
***   File "./lib/python3.5/site-packages/robogenerator/data_algorithm/metacomm/combinatorics/all_pairs2.py", line 24
    print items
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/robogenerator/data_algorithm/metacomm/combinatorics/combinatorics.py'...
***   File "./lib/python3.5/site-packages/robogenerator/data_algorithm/metacomm/combinatorics/combinatorics.py", line 45
    print element
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/robogenerator/data_algorithm/random_pairs.py'...
***   File "./lib/python3.5/site-packages/robogenerator/data_algorithm/random_pairs.py", line 76
    print result
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/robogenerator/dynamic_transition.py'...
***   File "./lib/python3.5/site-packages/robogenerator/dynamic_transition.py", line 90
    print sub_sub_expected_result,'***',sub_sub_actual_result
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/robogenerator/example'...
Listing './lib/python3.5/site-packages/robogenerator/example/FileBehavior'...
Listing './lib/python3.5/site-packages/robogenerator/example/SIPCallService'...
Listing './lib/python3.5/site-packages/robogenerator/example/Volume_create_delete_function'...
Listing './lib/python3.5/site-packages/robogenerator/example/xmind'...
Compiling './lib/python3.5/site-packages/robogenerator/generator.py'...
***   File "./lib/python3.5/site-packages/robogenerator/generator.py", line 13
    print self.case_instance.documentation
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/robogenerator/graph'...
Compiling './lib/python3.5/site-packages/robogenerator/graph/Dot.py'...
***   File "./lib/python3.5/site-packages/robogenerator/graph/Dot.py", line 77
    print nodes
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/robogenerator/graph_algorithm'...
Listing './lib/python3.5/site-packages/robogenerator/graph_algorithm/16'...
Listing './lib/python3.5/site-packages/robogenerator/graph_algorithm/17'...
Compiling './lib/python3.5/site-packages/robogenerator/graph_algorithm/cpp.py'...
***   File "./lib/python3.5/site-packages/robogenerator/graph_algorithm/cpp.py", line 19
    raise Exception,"Graph is empty"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/robogenerator/graph_algorithm/shortest_path.py'...
***   File "./lib/python3.5/site-packages/robogenerator/graph_algorithm/shortest_path.py", line 53
    print state_name_list
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/robogenerator/model.py'...
***   File "./lib/python3.5/site-packages/robogenerator/model.py", line 70
    raise Exception,' Not supported algorithm'
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/robogenerator/robogenerator.py'...
***   File "./lib/python3.5/site-packages/robogenerator/robogenerator.py", line 38
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/robogenerator/robograph.py'...
***   File "./lib/python3.5/site-packages/robogenerator/robograph.py", line 29
    print command
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/robogenerator/robomind.py'...
***   File "./lib/python3.5/site-packages/robogenerator/robomind.py", line 80
    print title
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/robogenerator/strategy'...
Listing './lib/python3.5/site-packages/robogenerator/test'...
Compiling './lib/python3.5/site-packages/robogenerator/test/command_execute.py'...
***   File "./lib/python3.5/site-packages/robogenerator/test/command_execute.py", line 4
    print dir()
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/robogenerator/util.py'...
***   File "./lib/python3.5/site-packages/robogenerator/util.py", line 12
    print filepath
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/robogenerator-0.3.7.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
